--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -14,7 +14,7 @@
     
     <div class="profile-content">
         <h1 class="profile-name page-hero-text">
-            {{ request.user }}&nbsp;<span class="roboto-font">( {{ request.user.email }} ) (Note: this is your private profile.)</span>
+            Hi, {{ up.firstname }}&nbsp;<span class="roboto-font">( {{ request.user.email }} ) (Note: this is your private profile.)</span>
         </h1>
 
         <div class="profile-metadata">
