Finished showing a list of approving users

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -28,7 +28,7 @@
 <br>
 <label for="id_aff_stu">YOUR AFFILIATION</label>
 <br>
-<input type="radio" id="id_aff_stu" name="aff" value="0" checked>STUDENT &emsp;
+<input type="radio" id="id_aff_stu" name="aff" value="0" >STUDENT &emsp;
 <input type="radio" id="id_aff_sta" name="aff" value="1">STAFF &emsp;
 <input type="radio" id="id_aff_fac" name="aff" value="2">FACULTY
 <br>
