Finished user approval (become moderator)

--- a/templates/mgmt/overview.html
+++ b/templates/mgmt/overview.html
@@ -9,10 +9,11 @@
 	Hi superuser your name is {{ u.firstname }}
 	<br>
 	<br>
-	<div class="page-subhero-text">Users awaiting approval</div>
+	<div class="page-subhero-text">{{ user_num }} Users awaiting approval</div>
 	{% for app_user in user_list %}		
-	    {{ app_user.firstname }}&nbsp;{{ app_user.lastname }}<br>		
-	    {{ app_user.affiliation_msg }}<br>
+	    <a href="{% url mgmt.views.approve_user app_user.id %}">Approve {{ app_user.firstname }}</a>: {{ app_user.affiliation_msg }}
+	    <br>
+	    
 	{% endfor %}
 </div>
 
