--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,9 @@
         <!--<a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>!-->
         <div class="sidebar-divider">GATEWAYS</div>
         <!--<h4><a href="/admin">Admin</a></h4>-->
+        {% if u.is_moderator %}
         <h4><a href="{%url event.views.post %}">Submit event</a></h4>
+        {% endif %}
         <h4><a href="{%url event.views.search %}">Search event</a></h4>
         <h4><a href="{%url event.views.archives %}">Event archives</a></h4>
         <h4><a href="{%url event.views.msg_send %}">Send messages</a></h4>
