--- a/templates/event/event_homepage.html
+++ b/templates/event/event_homepage.html
@@ -12,7 +12,7 @@
 </div>
 
 <div id="layout-posts-masonry">
-{% for event in object_list %}
+{% for event in events %}
 
 <div class="main-item-block main-item-style post-item">
    
