--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -13,7 +13,16 @@
 
 
 <div class="main-item-block">
-<input type="file" name="picture"/>
+	<div id="preview">
+         <img id="imghead"  src=''>
+	</div>
+      
+	 <div style="position:relative;">
+		<button id="browzer_button" style="position:absolute; margin-left:30px;width:150px;"/> Browzer </button>
+		<input type="file" name="picture" style="opacity:0; z-index:1;" onchange="document.getElementById('browzer_button').value = this.value;previewImage(this);" />
+	 </div>
+
+
 </div>
 
 <div class="entry-content-block">
