--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
     <div class="layout-main-inner-wrap">
 
     <aside class="layout-sidebar-wrap">
+        <img style="width: 170px; margin: -30px 0 0;" src="/webhost_media/static/logo.png">
         <!--<a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>!-->
         <div class="sidebar-divider"><a href="">My events</a></div>
         {% if u.is_moderator %}
