--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,7 +7,10 @@
     <h1 class="page-hero-text">Login</h1>
 </div>
 
-
+<style>
+.form-field-regular {
+}
+</style>
 
 <div id="login" class="main-item-block">
 			
