--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -13,50 +13,48 @@
 
 
 <div class="main-item-block">
-	<div id="preview">
-         <img id="imghead"  src=''>
+	<div id="preview" class="aligncenter">
+         <img id="imghead" src=''>
 	</div>
-      
-	 <div style="position:relative;">
-		<button id="browzer_button" style="position:absolute; margin-left:30px;width:150px;"/> Browzer </button>
-		<input type="file" name="picture" style="opacity:0; z-index:1;" onchange="document.getElementById('browzer_button').value = this.value;previewImage(this);" />
+	 <div style="position:relative;" class="aligncenter">
+		<button id="browzer_button" 
+		style="position:absolute; margin-left:50px; width:150px;"/>Browser</button>
+		<input type="file" name="picture" style="opacity:0; z-index:1;"
+		 onchange="document.getElementById('browzer_button').value = 
+		 this.value;previewImage(this);" />
 	 </div>
-
-
 </div>
 
 <div class="entry-content-block">
-<input type="text" id="id_firstname" name="firstname" placeholder=" FIRSTNAME " maxlength="100" size="20" />
-&emsp;
-<input type="text" id="id_lastname" name="lastname" placeholder=" LASTNAME " maxlength="100" size="20" />
-<br>
-<input type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" />
-<br>
-<input type="password" id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" />
+    <input class="form-field-regular" type="text" id="id_firstname" name="firstname" placeholder=" FIRSTNAME " maxlength="100" size="20" />
+    <input class="form-field-regular" type="text" 
+    id="id_lastname" name="lastname" placeholder=" LASTNAME " maxlength="100" size="20" />
+    <input class="form-field-regular" type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" />
+    <br>
+    <input class="form-field-regular" type="password" id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" />
 
-<br>
-<label for="id_aff_stu">YOUR AFFILIATION</label>
-<br>
-<input type="radio" id="id_aff_stu" name="aff" value="0" checked>STUDENT &emsp;
-<input type="radio" id="id_aff_sta" name="aff" value="1">STAFF &emsp;
-<input type="radio" id="id_aff_fac" name="aff" value="2">FACULTY
-<br>
-<label for="id_aff_stu">YOUR GRADUATION YEAR</label>
-<select name="grad_year" id="grad_year" size="1">
-    {% for y in grad_years %}
-    <option value="{{ y }}">&emsp;{{ y }}&emsp;</option>
-    {% endfor %}
-</select>
-<br>
-<br>
-<input type="text" id="id_affmsg" name="affmsg" placeholder=" AFFILIATION MESSAGE (IF YOU HAVE ONE) " maxlength="200" size="40" />
-<br> 
-<textarea type="text" id="id_bio" name="bio" rows="3" cols="40" maxlength="500" placeholder="WRITE A SHORT BIO FOR YOURSELF"></textarea>
-<br>
+    <label for="id_aff_stu">YOUR AFFILIATION</label>
+    <input type="radio" id="id_aff_stu" name="aff" value="0" checked>STUDENT &emsp;
+    <input type="radio" id="id_aff_sta" name="aff" value="1">STAFF &emsp;
+    <input type="radio" id="id_aff_fac" name="aff" value="2">FACULTY
+    <label for="major">YOUR MAJOR</label>
+    <select name="major" id="major" size="1">
+        <option value="{{ y }}">&emsp;{{ y }}&emsp;</option>
+    </select>
+    <label for="grad_year">YOUR GRADUATION YEAR</label>
+    <select name="grad_year" id="grad_year" size="1">
+        {% for y in grad_years %}
+        <option value="{{ y }}">&emsp;{{ y }}&emsp;</option>
+        {% endfor %}
+    </select>
+    <input class="form-field-regular" type="text" id="id_affmsg" name="affmsg" placeholder=" AFFILIATION MESSAGE (IF YOU HAVE ONE) " maxlength="200" size="40" />
+    <br> 
+    <textarea class="form-field-regular" type="text" id="id_bio" name="bio" rows="3" cols="40" maxlength="500" placeholder="WRITE A SHORT BIO FOR YOURSELF"></textarea>
+    <br>
 
-<input type="submit" value="Register"/>
-<br><br>
-</form>
+    <input type="submit" value="Register"/>
+    <br><br>
+    </form>
 </div>
        
 </div><!-- .layout-content-wrap -->
