Finished event meta

--- a/templates/event/event_homepage.html
+++ b/templates/event/event_homepage.html
@@ -23,8 +23,9 @@
         <h1 class="entry-title">
             <a href="{%url single event.id %}">{{ event.title }}</a>
         </h1>
-        <h3 class="entry-meta roboto-font">
-            {{ event.event_time|date:"Y-m-d" }}
+        <h3 class="main-item-meta roboto-font">
+            {{ event.event_time|date:"Y-m-d" }}<br>
+            {{ event.location }}
         </h3>
     </header>
 
