--- a/media/static/style.css
+++ b/media/static/style.css
@@ -425,14 +425,17 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   /*border-top: 2px solid #ce5333;*/
 /*  font-size: 16px;
   font-style: bold;*/
-  text-align: center;
+  text-align: left;
 }
 h1.entry-title a {
   color: white;
 }
 h1.entry-title {
-  font-size: 21px;
-  padding: 10px;  
+  font-size: 18px;
+  padding: 10px 10px 0;  
+}
+.main-item-meta {
+  margin: 0 10px 10px;
 }
 .entry-meta {
   margin: 0 20px 20px;
