--- a/templates/event/event_search_results.html
+++ b/templates/event/event_search_results.html
@@ -33,14 +33,13 @@
     <div class="main-item-block main-item-style post-item">
        
         <img src="/webhost_media/{{event.image1}}" width="100%">
-        
         <header class="entry-header">
-             
             <h1 class="entry-title">
                 <a href="{%url single event.id %}">{{ event.title }}</a>
             </h1>
-            <h3 class="entry-meta roboto-font">
-                {{ event.event_time|date:"Y-m-d" }}
+            <h3 class="main-item-meta roboto-font">
+                {{ event.event_time|date:"Y-m-d" }}<br>
+                {{ event.location }}
             </h3>
         </header>
 
